# media-toolkit

./: .gitignore  ARCHITECTURE.md  DEVELOPMENT.md  LICENSE  README.md  cliff.toml  pyproject.toml
.github/workflows/: release.yml
app/: __init__.py  __main__.py  gui.py
artifact/: __init__.py  config_template.json
artifact/cli/: __init__.py  classify.py  doctor.py
artifact/gui/: __init__.py  __main__.py  module.py
artifact/gui/tabs/: classify_tab.py
artifact/workflow/classify/: __init__.py  config.py  ops.py  path.py
base/: __init__.py  app_config.py  config_paths.py  console.py  doctor.py  drag_loop.py  fs.py
base/gui/: __init__.py  app_check.py  config.py  log_view.py  palette.py  path_list.py  path_picker.py  qt_sink.py  shell.py  worker.py
ft/: __init__.py  config_template.json  file_toolkit_cli.py  fs.py
ft/cli/: __init__.py  classify.py  doctor.py
ft/gui/: __init__.py  __main__.py  app.py  main_window.py  module.py
ft/gui/tabs/: classify_tab.py
ft/gui/widgets/: candidate_dialog.py  drop_area.py
ft/workflow/classify/: __init__.py  config.py  matcher.py  ops.py
manga/: __main__.py
manga/cli/: __init__.py  cover.py  examples.py  meta.py  name.py  pack.py
manga/core/: __init__.py  config.py  models.py  patterns.py
manga/gui/: __init__.py  __main__.py  module.py
manga/gui/tabs/: base_tab.py  cover_tab.py  metadata_tab.py  pack_tab.py  sourcefile_tab.py
manga/infra/: __init__.py
manga/naming/: builder.py  parser.py  text.py
manga/presentation/: __init__.py  view.py
manga/workflow/: cover.py  metadata.py  pack.py  sourcefile.py
module/artifact/: __init__.py
module/artifact/cli/: __init__.py  classify.py  doctor.py
module/artifact/core/: __init__.py  runtime_config.py
module/artifact/gui/: __init__.py  __main__.py  module.py
module/artifact/gui/tabs/: classify_tab.py
module/artifact/gui/widgets/: candidate_dialog.py  drop_area.py
module/manga/: __init__.py  __main__.py  examples.py
module/manga/cli/: __init__.py  cover.py  cover_kit.py  doctor.py  examples.py  make_cover.py  make_meta.py  meta.py  meta_kit.py  name.py  pack.py  pack_kit.py  pack_pic.py  rename_kit.py  std_title.py
module/manga/core/: __init__.py  config.py  models.py  patterns.py  runtime_config.py
module/manga/data/: examples.json
module/manga/extras/: __init__.py  doctor.py  examples.py
module/manga/gui/: __init__.py  __main__.py  module.py
module/manga/infra/: __init__.py  parallel.py
module/manga/naming/: __init__.py  builder.py  parser.py  text.py
module/manga/presentation/: __init__.py  export.py  view.py
module/manga/workflow/: __init__.py  author_library.py  cover.py  cover_kit.py  make_cover.py  make_meta.py  meta_kit.py  metadata.py  pack.py  pack_kit.py  pack_pic.py  rename_kit.py  sourcefile.py  std_title.py
mt/: __init__.py  __main__.py  builder.py  comicinfo.py  console.py  manga-toolkit-cli.py  manga_toolkit_cli.py  models.py  parser.py  patterns.py  scanner.py  session.py  utils.py
mt/cli/: __init__.py  comicinfo.py  comicinfo_cmd.py  cover.py  doctor.py  examples.py  meta.py  metadata.py  name.py  pack.py  rename.py  rename_cmd.py  sourcefile.py
mt/core/: __init__.py  config.py  models.py  patterns.py
mt/data/: examples.json
mt/gui/: __init__.py  __main__.py  app.py  gui_config.py  main_window.py  module.py  qt_sink.py
mt/gui/tabs/: base_tab.py  cover_tab.py  metadata_tab.py  pack_tab.py  sourcefile_tab.py
mt/gui/widgets/: log_view.py  path_picker.py
mt/gui/workers/: apply.py  plan_worker.py
mt/infra/: console.py  parallel.py  utils.py
mt/naming/: __init__.py  builder.py  parser.py  text.py
mt/presentation/: __init__.py  view.py
mt/workflow/: __init__.py  comicinfo.py  cover.py  drag.py  metadata.py  pack.py  scanner.py  session.py  sourcefile.py
tests/: test_classify.py  test_classify_cli.py  test_ft_gui_widgets.py  test_naming.py
(+30 files in other folders)
