[tool.poetry]
name = "manga-toolkit"
version = "0.1.4"
description = "漫画文件整理工具集：重命名 & ComicInfo.xml 生成"
authors = ["Lin Tan"]
license = "MIT"
readme = "README.md"
packages = [{include = "mt"}]

[tool.poetry.dependencies]
python = "^3.11"
# 繁简转换（译名繁体→简体，必选）
zhconv = ">=1.4.0"
# 封面图像处理（cover 子命令必选）
Pillow = ">=10.0"
# smartcrop 显著性裁剪（cover --smart 模式）
smartcrop = ">=0.3.2"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0"

# 可选 GUI 组：`poetry install --with gui` 才装；CLI 用户零负担
[tool.poetry.group.gui]
optional = true

[tool.poetry.group.gui.dependencies]
# PySide6 当前 wheel 仅覆盖 Python 3.9–3.13；约束写在依赖项而非主 python，
# 避免影响仅装 CLI 的用户。
PySide6 = { version = ">=6.6", python = ">=3.11,<3.14" }

[tool.poetry.scripts]
# CLI 命令名用连字符（CLI 惯例），模块名用下划线（PEP 8）
manga-toolkit-cli = "mt.manga_toolkit_cli:main"
manga-toolkit-gui = "mt.gui.app:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
