[project]
name = "media-toolkit"
version = "0.4.0"
description = "媒体文件整理工具集：漫画重命名 / ComicInfo.xml / 按作者归类"
authors = [{ name = "Lin Tan" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # 繁简转换（译名繁体→简体，必选）
    "zhconv>=1.4.0",
    # 封面图像处理（make-cover 子命令必选）
    "Pillow>=10.0",
    # smartcrop 显著性裁剪（make-cover --smart 模式）
    "smartcrop>=0.3.2",
]

# 可选 GUI extras：`uv sync --extra gui` 才装；CLI 用户零负担。
# PySide6 当前 wheel 仅覆盖 Python 3.10–3.13；marker 约束写在依赖项而非主
# requires-python，避免影响仅装 CLI 的用户。
[project.optional-dependencies]
gui = [
    "PySide6>=6.6 ; python_version < '3.14'",
]

[project.scripts]
# CLI 命令名用连字符（CLI 惯例），模块名用下划线（PEP 8）
manga-cli  = "module.manga.cli:main"
manga-gui  = "module.manga.gui:main"
artifact-cli  = "module.artifact.cli:main"
artifact-gui  = "module.artifact.gui:main"
app-gui = "app.gui:main"

# dev 组（PEP 735）：`uv sync --group dev`；不会被发布到 wheel/PyPI extras
[dependency-groups]
dev = [
    "pytest>=8.0",
    # 仅 CI 打包 Windows 单文件 exe 时使用；pyinstaller wheel 仅覆盖 Python <3.15
    "pyinstaller>=6.20.0,<7 ; python_version < '3.15'",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
cache_dir = "tests/.pytest_cache"

[tool.hatch.build.targets.wheel]
packages = ["module", "base", "app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
